Moved stuff around to containerize and also added basic code in order to communicate with IoT Hub and other containers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/downloadAsset.js"
+            "program": "${workspaceFolder}/app/downloadAsset.js"
         }
     ]
 }
