--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "azure-iot-device": "^1.12.0",
+    "azure-iot-device-mqtt": "^1.11.0"
   }
 }
