--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "azure-iot-device": "^1.12.0",
-    "azure-iot-device-mqtt": "^1.11.0"
+    "azure-iot-device-mqtt": "^1.11.0",
+    "moment-timezone": "^0.5.27",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.0"
   }
 }
