--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "azure-iot-device": "^1.12.0",
     "azure-iot-device-mqtt": "^1.11.0",
     "moment-timezone": "^0.5.27",
+    "node-static": "^0.7.11",
+    "socket.io": "^2.3.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.0"
   }
