--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,3 +56,17 @@ stages:
           containerRegistry: $(dockerRegistryServiceConnection)
           tags: |
             $(major).$(minor).$(patch)-amd64
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
+            git tag $(major).$(minor).$(patch)-amd64
+            Write-Host "Successfully created tag $(major).$(minor).$(patch)-amd64"
+          errorActionPreference: 'continue'
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
+            git push --tags
+                  Write-Host "Successfully pushed tag $(major).$(minor).$(patch)-amd64 to origin"
+          errorActionPreference: 'continue'
