--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,10 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+      - checkout: self
+        persistCredentials: true
+        clean: true
+
       - bash: |
            echo "##vso[build.updatebuildnumber]$(major).$(minor).$(patch)"
         name: SetDevBuildName
