--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.27",
     "node-static": "^0.7.11",
     "socket.io": "^2.3.0",
+    "unzipper": "^0.10.11",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.0"
   }
