Update azure-pipelines-dev.yml for Azure Pipelines

--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -59,7 +59,7 @@ stages:
           dockerfile: $(dockerfilePath)
           containerRegistry: $(dockerRegistryServiceConnection)
           tags: |
-            dev-$(major).$(minor).$(patch)-amd64
+            $(major).$(minor).$(patch)-amd64
       - task: PowerShell@2
         inputs:
           targetType: 'inline'
