--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,12 @@
     "axios": "^0.19.0",
     "azure-iot-device": "^1.12.0",
     "azure-iot-device-mqtt": "^1.11.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "moment-timezone": "^0.5.27",
     "node-static": "^0.7.11",
+    "os": "^0.1.1",
+    "prom-client": "^13.1.0",
     "socket.io": "^2.3.0",
     "unzipper": "^0.10.11",
     "winston": "^3.2.1",
