--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.19.0",
     "azure-iot-device": "^1.12.0",
     "azure-iot-device-mqtt": "^1.11.0",
+    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.27",
     "node-static": "^0.7.11",
+    "object-hash": "^2.2.0",
     "socket.io": "^2.3.0",
     "tedious": "^9.2.1",
     "winston": "^3.2.1",
