--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "applicationinsights": "^2.1.3",
     "async-retry": "^1.3.1",
     "axios": "^0.19.0",
     "azure-iot-device": "^1.12.0",
