--- a/app/package.json
+++ b/app/package.json
@@ -12,23 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "applicationinsights": "^2.1.3",
-    "async-retry": "^1.3.1",
-    "axios": "^0.19.0",
-    "azure-iot-device": "^1.12.0",
-    "azure-iot-device-mqtt": "^1.11.0",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.27",
-    "node-static": "^0.7.11",
-    "object-hash": "^2.2.0",
-    "os": "^0.1.1",
-    "prom-client": "^13.1.0",
-    "socket.io": "^2.3.0",
-    "tedious": "^9.2.1",
-    "unzipper": "^0.10.11",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.4.0"
+    "prom-client": "^13.1.0"
   }
 }
