--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "express": "^4.17.1",
     "prom-client": "^13.1.0"
   }
