--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
+    "azure-iot-device": "^1.17.6",
+    "azure-iot-device-mqtt": "^1.15.6",
     "express": "^4.17.1",
     "prom-client": "^13.1.0"
   }
